able to use findAllGoalsByUserId